--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <!-- MENU -->
     <div class="contenedor-header">
         <header>
-            <h1>THE <span class="txtRojo">GYM</span></h1>
+            <h1>H<span class="txtRojo">E</span>RO</h1>
             <nav id="nav">
                 <a href="#inicio" onclick="seleccionar()">inicio</a>
                 <a href="#nosotros" onclick="seleccionar()">Nosotros</a>
@@ -23,6 +23,7 @@
                 <a href="#contacto" onclick="seleccionar()">Contacto</a>
             </nav>
             <div class="redes">
+                <a href="#inicio_sesion" onclick="seleccionar()">Iniciar Sesión</a>
                 <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
                 <a href="#"><i class="fa-brands fa-twitter"></i></a>
                 <a href="#"><i class="fa-brands fa-square-instagram"></i></a>
