--- a/html/index.html
+++ b/html/index.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="estilo.css">
-    <title>THE GYM</title>
+    <link rel="stylesheet" href="/css/estilo.css">
+    <title>HERO GYM</title>
 </head>
 <body>
     <!-- MENU -->
@@ -23,10 +23,9 @@
                 <a href="#contacto" onclick="seleccionar()">Contacto</a>
             </nav>
             <div class="redes">
-                <a href="#inicio_sesion" onclick="seleccionar()">Iniciar Sesión</a>
-                <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
-                <a href="#"><i class="fa-brands fa-twitter"></i></a>
-                <a href="#"><i class="fa-brands fa-square-instagram"></i></a>
+                <a href="/html/inicio_sesion.html" onclick="seleccionar()">Iniciar Sesión</a>
+                <a href="https://www.facebook.com/herogym.25/"><i class="fa-brands fa-facebook-f"></i></a>
+                <a href="https://www.instagram.com/herogym.25"><i class="fa-brands fa-square-instagram"></i></a>
             </div>
             <!-- Icono del menu responsive -->
             <div id="icono-nav" class="nav-responsive" onclick="mostrarOcultarMenu()">
@@ -72,7 +71,7 @@
     <section id="nosotros" class="nosotros">
         <div class="fila">
             <div class="col">
-                <img src="img/nosotros.png" alt="">
+                <img src="/img/nosotros.png" alt="">
             </div>
             <div class="col">
                 <div class="contenedor-titulo">
@@ -120,7 +119,7 @@
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur necessitatibus quod provident libero, nam corrupti, adipisci ea inventore cum aliquid asperiores pariatur harum sunt. Tempore expedita atque quos ipsum nisi.</p>
                 </div>
                 <div class="col">
-                    <img src="img/servicios.png" alt="">
+                    <img src="/img/servicios.png" alt="">
                 </div>
             </div>
         </div>
@@ -168,7 +167,7 @@
     <section id="comodidades" class="comodidades">
         <div class="fila">
             <div class="col">
-                <img src="img/nosotros.png" alt="">
+                <img src="/img/nosotros.png" alt="">
             </div>
             <div class="col">
                 <div class="contenedor-titulo">
@@ -204,24 +203,24 @@
             </div>
             <div class="fila">
                 <div class="col">
-                    <img src="img/f1.jpg" alt="">
+                    <img src="/img/f1.jpg" alt="">
                 </div>
                 <div class="col">
-                    <img src="img/f2.jpg" alt="">
+                    <img src="/img/f2.jpg" alt="">
                 </div>
                 <div class="col">
-                    <img src="img/f3.jpg" alt="">
+                    <img src="/img/f3.jpg" alt="">
                 </div>
             </div>
             <div class="fila">
                 <div class="col">
-                    <img src="img/f4.jpg" alt="">
+                    <img src="/img/f4.jpg" alt="">
                 </div>
                 <div class="col">
-                    <img src="img/f5.jpg" alt="">
+                    <img src="/img/f5.jpg" alt="">
                 </div>
                 <div class="col">
-                    <img src="img/f6.jpg" alt="">
+                    <img src="/img/f6.jpg" alt="">
                 </div>
             </div>
         </div>
@@ -241,7 +240,7 @@
             </div>
             <div class="fila">
                 <div class="col">
-                    <img src="img/e1.png" alt="">
+                    <img src="/img/e1.png" alt="">
                     <div class="info">
                         <h2>MARCOS</h2>
                         <p>Fitness - Pilates - Yoga</p>
@@ -254,7 +253,7 @@
                     </div>
                 </div>
                 <div class="col">
-                    <img src="img/e2.png" alt="">
+                    <img src="/img/e2.png" alt="">
                     <div class="info">
                         <h2>PATRICIA</h2>
                         <p>Fitness - Pilates - Yoga</p>
@@ -267,7 +266,7 @@
                     </div>
                 </div>
                 <div class="col">
-                    <img src="img/e3.png" alt="">
+                    <img src="/img/e3.png" alt="">
                     <div class="info">
                         <h2>JUAN</h2>
                         <p>Fitness - Pilates - Yoga</p>
@@ -344,6 +343,6 @@
             </div>
         </div>
     </footer>
-    <script src="app.js"></script>
+    <script src="/app.js"></script>
 </body>
 </html>
