--- a/html/index.html
+++ b/html/index.html
@@ -12,7 +12,7 @@
     <!-- MENU -->
     <div class="contenedor-header">
         <header>
-            <h1>H<span class="txtRojo">E</span>RO</h1>
+            <a href="/html/index.html" class="logo"><img src="/img/logo.png" alt="Logo"></a>
             <nav id="nav">
                 <a href="#inicio" onclick="seleccionar()">inicio</a>
                 <a href="#nosotros" onclick="seleccionar()">Nosotros</a>
@@ -326,7 +326,7 @@
 
     <footer>
         <div class="info">
-            <p>2023 - <span class="txtRojo">THE GYM</span> Todos los derechos reservados</p>
+            <p>2023 - <span class="txtRojo">HERO GYM</span> Todos los derechos reservados</p>
             <div class="redes">
                 <a href="#">
                     <i class="fa-brands fa-facebook-f"></i>
